// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Orders /> check how renders should everything correctly with one order and type PLACED_ORDERS 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #FAFAFA;
  padding: 2.4rem;
  width: 100%;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 .arrow {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0.8rem;
}

.c3 .hide-arrow {
  opacity: 0;
  pointer-events: none;
}

.c3 .form-number {
  margin: 0 0.8rem;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0.8rem;
  margin-right: 0.8rem;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c11 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c13 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.4rem;
}

.c21 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.4rem;
}

.c22 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.7rem;
}

.c25 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0.8rem;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.5rem;
}

.c26 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 2.2rem;
}

.c28 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.3rem;
}

.c5 {
  background-color: #FAFAFA;
  border: 1px solid #777;
  border-radius: 1px;
  box-sizing: content-box;
  font-size: 1.5rem;
  outline: none;
  padding: 0.8rem 0;
  text-align: center;
  width: 5rem;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

.c29 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
}

.c29 .arrow {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0.8rem;
}

.c29 .hide-arrow {
  opacity: 0;
  pointer-events: none;
}

.c29 .ellipsis {
  margin: 0 0.8rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c29 .of {
  margin: 0 0.8rem;
}

.c29 .number-link {
  padding: 0.8rem;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c29 .number-link:hover {
  color: #06AD96;
}

.c29 .number-link.active {
  color: #22A7F0;
  font-weight: 700;
}

.c29 .number-link.active:hover {
  color: #22A7F0;
  cursor: default;
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 2.4rem;
  padding: 0 1.2rem 0 0;
}

.c8 {
  position: relative;
}

.c9 {
  padding: 2.4rem 0;
  border-bottom: 1px solid #BFBFBF;
}

.c9:first-child {
  padding-top: 0;
}

.c12 {
  color: #06AD96 !important;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c12:hover {
  color: #009680 !important;
  cursor: pointer;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 2.4rem;
  padding: 0 1.2rem 0 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c14 > *:not(:last-child) {
  margin-right: 1.2rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 5;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16 > *:not(:last-child) {
  margin-right: 0;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c19 > *:not(:last-child) {
  margin-right: 0;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 2.4rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c15 {
  padding-top: 2.4rem;
}

.c15:last-child {
  padding-bottom: 0;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c18 > *:not(:last-child) {
  margin-right: 0.8rem;
}

.c18 .name {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  font-size: 1.5rem;
}

.c18 .name > a {
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c18 .name > a:hover {
  color: #06AD96;
}

.c17 {
  max-height: 5rem;
  min-width: 5rem;
  width: 5rem;
}

.c17 img {
  max-height: 5rem;
  max-width: 5rem;
  object-fit: cover;
}

.c24 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c24:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 1.2rem;
}

.c2 .label {
  font-size: 1.5rem;
  margin-right: 1.2rem;
}

.c2 .select {
  font-size: 1.4rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 22rem;
  z-index: 100;
}

@media only screen and (max-width:56.25em) {
  .c0 {
    padding: 2.4rem 1.2rem;
  }
}

@media only screen and (max-width:37.5em) {
  .c27 {
    padding: 0;
  }
}

@media only screen and (max-width:37.5em) {
  .c1 {
    padding: 0;
  }
}

@media only screen and (max-width:56.25em) {
  .c18 {
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c18 > *:not(:last-child) {
    margin-right: 0;
    margin-bottom: 0.8rem;
  }

  .c18 .name {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

@media only screen and (max-width:56.25em) {
  .c20 {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

<section
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <label
          class="label"
          for="sortOption"
        >
          Sort
        </label>
        <div
          class="select css-2b097c-container"
          id="sortOption"
        >
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class=" css-l640om-control"
          >
            <div
              class=" css-g1d714-ValueContainer"
            >
              <div
                class=" css-1uccc91-singleValue"
              >
                Date - from newest
              </div>
              <input
                aria-autocomplete="list"
                class="css-wmatm6-dummyInput-DummyInput"
                id="react-select-2-input"
                readonly=""
                tabindex="0"
                value=""
              />
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-ml9fjp-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3"
        data-testid="InputPagination"
      >
        <a
          class="arrow hide-arrow"
          data-testid="InputPagination-left-arrow"
        >
          <div
            class="c4"
            color=""
          >
            <svg>
              arrow.svg
            </svg>
          </div>
        </a>
        <form
          class="form-number"
        >
          <input
            class="c5"
            data-testid="NumberInput-page"
            name="page"
            type="number"
            value="1"
          />
        </form>
        <span
          class="c6"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          of
        </span>
        <span
          class="c6"
          color=""
          data-testid="InputPagination-number-of-pages"
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          1
        </span>
        <a
          class="arrow hide-arrow"
          data-testid="InputPagination-right-arrow"
        >
          <div
            class="c7"
            color=""
          >
            <svg>
              arrow.svg
            </svg>
          </div>
        </a>
      </div>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        <div
          class="c10"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <span
            class="c11"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <span>
              seller 
            </span>
            <a
              data-testid="OrderList-user-link"
            >
              <span
                class="c12"
              >
                sellerUser
              </span>
            </a>
          </span>
          <span
            class="c13"
            color=""
            display="inline-block"
            overflow="visible"
            size="2"
            spacing="0px"
            transform=""
          >
            8 Jan 2021, 12:08
          </span>
        </div>
        <div
          class="c14 c15"
          data-testid="TransactionAndOrderProdItem"
          direction="row"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <a
            data-testid="TransactionAndOrderProdItem-product-link-photo"
          >
            <div
              class="c16 c17"
              data-testid="ProductThumbnail"
              direction="row"
              height="5"
              spacing=""
              width="5"
              wrap="nowrap"
            >
              <img
                alt="product1"
                data-testid="ProductThumbnail-img"
                src="http://192.168.1.109:4000/orders/o1/p1/photo"
              />
            </div>
          </a>
          <div
            class="c18"
          >
            <span
              class="name"
            >
              <a
                data-testid="TransactionAndOrderProdItem-product-link-name"
              >
                product1
              </a>
            </span>
            <div
              class="c19 c20"
              direction="row"
              spacing=""
              width="100%"
              wrap="nowrap"
            >
              <span
                class="c21"
                color="#777"
                data-testid="TransactionAndOrderProdItem-product-price-per-piece"
                display="inline-block"
                overflow="visible"
                size="2"
                spacing="0px"
                transform=""
              >
                4 x $4
              </span>
              <span
                class="c22"
                color=""
                display="inline-block"
                overflow="visible"
                size="4"
                spacing="0px"
                transform=""
              >
                $16
              </span>
            </div>
          </div>
        </div>
        <div
          class="c23"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <a
            data-testid="OrderList-order-details-link"
          >
            <button
              class="c24"
              color="blue"
              type="button"
            >
              details
            </button>
          </a>
          <div>
            <span
              class="c25"
              color="#777"
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="1px"
              transform=""
            >
              TOTAL
            </span>
            <span
              class="c26"
              color=""
              display="inline-block"
              overflow="visible"
              size="5"
              spacing="0px"
              transform=""
            >
              $16
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c27"
    >
      <span
        class="c28"
        color="#777"
        data-testid="PaginationCounter"
        display="inline-block"
        overflow="visible"
        size="1"
        spacing="0px"
        transform=""
      >
        1 - 1 of 1 order
      </span>
      <div
        class="c29"
        data-testid="NumberPagination"
      >
        <a
          class="arrow hide-arrow"
          data-testid="NumberPagination-left-arrow"
        >
          <div
            class="c4"
            color=""
          >
            <svg>
              arrow.svg
            </svg>
          </div>
        </a>
        <a
          class="number-link active"
          data-testid="NumberPagination-page1"
        >
          1
        </a>
        <span
          class="of"
        >
          of
        </span>
        <span
          class="of"
          data-testid="NumberPagination-number-of-pages"
        >
          1
        </span>
        <a
          class="arrow hide-arrow"
          data-testid="NumberPagination-right-arrow"
        >
          <div
            class="c7"
            color=""
          >
            <svg>
              arrow.svg
            </svg>
          </div>
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`<Orders /> check how renders should everything correctly with two orders and type SELL_HISTORY 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #FAFAFA;
  padding: 2.4rem;
  width: 100%;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 .arrow {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0.8rem;
}

.c3 .hide-arrow {
  opacity: 0;
  pointer-events: none;
}

.c3 .form-number {
  margin: 0 0.8rem;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0.8rem;
  margin-right: 0.8rem;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c11 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c13 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.4rem;
}

.c21 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.4rem;
}

.c22 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.7rem;
}

.c25 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0.8rem;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.5rem;
}

.c26 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 2.2rem;
}

.c28 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.3rem;
}

.c5 {
  background-color: #FAFAFA;
  border: 1px solid #777;
  border-radius: 1px;
  box-sizing: content-box;
  font-size: 1.5rem;
  outline: none;
  padding: 0.8rem 0;
  text-align: center;
  width: 5rem;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

.c29 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
}

.c29 .arrow {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0.8rem;
}

.c29 .hide-arrow {
  opacity: 0;
  pointer-events: none;
}

.c29 .ellipsis {
  margin: 0 0.8rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c29 .of {
  margin: 0 0.8rem;
}

.c29 .number-link {
  padding: 0.8rem;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c29 .number-link:hover {
  color: #06AD96;
}

.c29 .number-link.active {
  color: #22A7F0;
  font-weight: 700;
}

.c29 .number-link.active:hover {
  color: #22A7F0;
  cursor: default;
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 2.4rem;
  padding: 0 1.2rem 0 0;
}

.c8 {
  position: relative;
}

.c9 {
  padding: 2.4rem 0;
  border-bottom: 1px solid #BFBFBF;
}

.c9:first-child {
  padding-top: 0;
}

.c12 {
  color: #06AD96 !important;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c12:hover {
  color: #009680 !important;
  cursor: pointer;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 2.4rem;
  padding: 0 1.2rem 0 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c14 > *:not(:last-child) {
  margin-right: 1.2rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 5;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16 > *:not(:last-child) {
  margin-right: 0;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c19 > *:not(:last-child) {
  margin-right: 0;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 2.4rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c15 {
  padding-top: 2.4rem;
}

.c15:last-child {
  padding-bottom: 0;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c18 > *:not(:last-child) {
  margin-right: 0.8rem;
}

.c18 .name {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  font-size: 1.5rem;
}

.c18 .name > a {
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c18 .name > a:hover {
  color: #06AD96;
}

.c17 {
  max-height: 5rem;
  min-width: 5rem;
  width: 5rem;
}

.c17 img {
  max-height: 5rem;
  max-width: 5rem;
  object-fit: cover;
}

.c24 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c24:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 1.2rem;
}

.c2 .label {
  font-size: 1.5rem;
  margin-right: 1.2rem;
}

.c2 .select {
  font-size: 1.4rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 22rem;
  z-index: 100;
}

@media only screen and (max-width:56.25em) {
  .c0 {
    padding: 2.4rem 1.2rem;
  }
}

@media only screen and (max-width:37.5em) {
  .c27 {
    padding: 0;
  }
}

@media only screen and (max-width:37.5em) {
  .c1 {
    padding: 0;
  }
}

@media only screen and (max-width:56.25em) {
  .c18 {
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c18 > *:not(:last-child) {
    margin-right: 0;
    margin-bottom: 0.8rem;
  }

  .c18 .name {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

@media only screen and (max-width:56.25em) {
  .c20 {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

<section
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <label
          class="label"
          for="sortOption"
        >
          Sort
        </label>
        <div
          class="select css-2b097c-container"
          id="sortOption"
        >
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class=" css-l640om-control"
          >
            <div
              class=" css-g1d714-ValueContainer"
            >
              <div
                class=" css-1uccc91-singleValue"
              >
                Date - from newest
              </div>
              <input
                aria-autocomplete="list"
                class="css-wmatm6-dummyInput-DummyInput"
                id="react-select-3-input"
                readonly=""
                tabindex="0"
                value=""
              />
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-ml9fjp-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3"
        data-testid="InputPagination"
      >
        <a
          class="arrow hide-arrow"
          data-testid="InputPagination-left-arrow"
        >
          <div
            class="c4"
            color=""
          >
            <svg>
              arrow.svg
            </svg>
          </div>
        </a>
        <form
          class="form-number"
        >
          <input
            class="c5"
            data-testid="NumberInput-page"
            name="page"
            type="number"
            value="1"
          />
        </form>
        <span
          class="c6"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          of
        </span>
        <span
          class="c6"
          color=""
          data-testid="InputPagination-number-of-pages"
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          1
        </span>
        <a
          class="arrow hide-arrow"
          data-testid="InputPagination-right-arrow"
        >
          <div
            class="c7"
            color=""
          >
            <svg>
              arrow.svg
            </svg>
          </div>
        </a>
      </div>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        <div
          class="c10"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <span
            class="c11"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <span>
              buyer 
            </span>
            <a
              data-testid="OrderList-user-link"
            >
              <span
                class="c12"
              >
                buyerUser
              </span>
            </a>
          </span>
          <span
            class="c13"
            color=""
            display="inline-block"
            overflow="visible"
            size="2"
            spacing="0px"
            transform=""
          >
            8 Jan 2021, 12:08
          </span>
        </div>
        <div
          class="c14 c15"
          data-testid="TransactionAndOrderProdItem"
          direction="row"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <a
            data-testid="TransactionAndOrderProdItem-product-link-photo"
          >
            <div
              class="c16 c17"
              data-testid="ProductThumbnail"
              direction="row"
              height="5"
              spacing=""
              width="5"
              wrap="nowrap"
            >
              <img
                alt="product1"
                data-testid="ProductThumbnail-img"
                src="http://192.168.1.109:4000/orders/o1/p1/photo"
              />
            </div>
          </a>
          <div
            class="c18"
          >
            <span
              class="name"
            >
              <a
                data-testid="TransactionAndOrderProdItem-product-link-name"
              >
                product1
              </a>
            </span>
            <div
              class="c19 c20"
              direction="row"
              spacing=""
              width="100%"
              wrap="nowrap"
            >
              <span
                class="c21"
                color="#777"
                data-testid="TransactionAndOrderProdItem-product-price-per-piece"
                display="inline-block"
                overflow="visible"
                size="2"
                spacing="0px"
                transform=""
              >
                4 x $4
              </span>
              <span
                class="c22"
                color=""
                display="inline-block"
                overflow="visible"
                size="4"
                spacing="0px"
                transform=""
              >
                $16
              </span>
            </div>
          </div>
        </div>
        <div
          class="c23"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <a
            data-testid="OrderList-order-details-link"
          >
            <button
              class="c24"
              color="blue"
              type="button"
            >
              details
            </button>
          </a>
          <div>
            <span
              class="c25"
              color="#777"
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="1px"
              transform=""
            >
              TOTAL
            </span>
            <span
              class="c26"
              color=""
              display="inline-block"
              overflow="visible"
              size="5"
              spacing="0px"
              transform=""
            >
              $16
            </span>
          </div>
        </div>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <span
            class="c11"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <span>
              buyer 
            </span>
            <a
              data-testid="OrderList-user-link"
            >
              <span
                class="c12"
              >
                buyerUser
              </span>
            </a>
          </span>
          <span
            class="c13"
            color=""
            display="inline-block"
            overflow="visible"
            size="2"
            spacing="0px"
            transform=""
          >
            18 Feb 2021, 22:12
          </span>
        </div>
        <div
          class="c14 c15"
          data-testid="TransactionAndOrderProdItem"
          direction="row"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <a
            data-testid="TransactionAndOrderProdItem-product-link-photo"
          >
            <div
              class="c16 c17"
              data-testid="ProductThumbnail"
              direction="row"
              height="5"
              spacing=""
              width="5"
              wrap="nowrap"
            >
              <img
                alt="product2"
                data-testid="ProductThumbnail-img"
                src="http://192.168.1.109:4000/orders/o2/p2/photo"
              />
            </div>
          </a>
          <div
            class="c18"
          >
            <span
              class="name"
            >
              <a
                data-testid="TransactionAndOrderProdItem-product-link-name"
              >
                product2
              </a>
            </span>
            <div
              class="c19 c20"
              direction="row"
              spacing=""
              width="100%"
              wrap="nowrap"
            >
              <span
                class="c21"
                color="#777"
                data-testid="TransactionAndOrderProdItem-product-price-per-piece"
                display="inline-block"
                overflow="visible"
                size="2"
                spacing="0px"
                transform=""
              >
                2 x $6.40
              </span>
              <span
                class="c22"
                color=""
                display="inline-block"
                overflow="visible"
                size="4"
                spacing="0px"
                transform=""
              >
                $12.80
              </span>
            </div>
          </div>
        </div>
        <div
          class="c23"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <a
            data-testid="OrderList-order-details-link"
          >
            <button
              class="c24"
              color="blue"
              type="button"
            >
              details
            </button>
          </a>
          <div>
            <span
              class="c25"
              color="#777"
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="1px"
              transform=""
            >
              TOTAL
            </span>
            <span
              class="c26"
              color=""
              display="inline-block"
              overflow="visible"
              size="5"
              spacing="0px"
              transform=""
            >
              $12.80
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c27"
    >
      <span
        class="c28"
        color="#777"
        data-testid="PaginationCounter"
        display="inline-block"
        overflow="visible"
        size="1"
        spacing="0px"
        transform=""
      >
        1 - 2 of 2 orders
      </span>
      <div
        class="c29"
        data-testid="NumberPagination"
      >
        <a
          class="arrow hide-arrow"
          data-testid="NumberPagination-left-arrow"
        >
          <div
            class="c4"
            color=""
          >
            <svg>
              arrow.svg
            </svg>
          </div>
        </a>
        <a
          class="number-link active"
          data-testid="NumberPagination-page1"
        >
          1
        </a>
        <span
          class="of"
        >
          of
        </span>
        <span
          class="of"
          data-testid="NumberPagination-number-of-pages"
        >
          1
        </span>
        <a
          class="arrow hide-arrow"
          data-testid="NumberPagination-right-arrow"
        >
          <div
            class="c7"
            color=""
          >
            <svg>
              arrow.svg
            </svg>
          </div>
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`<Orders /> check how renders should render correct info if orders are empty array and type PLACED_ORDERS 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: center;
}

<h4
    class="c0"
    data-testid="Orders-no-orders-info"
    font-size=""
  >
    You don't have any placed orders yet
  </h4>
</DocumentFragment>
`;

exports[`<Orders /> check how renders should render correct info if orders are empty array and type SELL_HISTORY 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: center;
}

<h4
    class="c0"
    data-testid="Orders-no-orders-info"
    font-size=""
  >
    Your sell history is empty
  </h4>
</DocumentFragment>
`;

exports[`<Orders /> check how renders should render correct info if orders are null and type PLACED_ORDERS 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: center;
}

<h4
    class="c0"
    data-testid="Orders-error"
    font-size=""
  >
    There is a problem to fetch your placed orders
  </h4>
</DocumentFragment>
`;

exports[`<Orders /> check how renders should render correct info if orders are null and type SELL_HISTORY 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: center;
}

<h4
    class="c0"
    data-testid="Orders-error"
    font-size=""
  >
    There is a problem to fetch your sell history
  </h4>
</DocumentFragment>
`;

exports[`<Orders /> check how renders should render only <Loader /> 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
}

.c1 {
  display: inline-block;
  position: relative;
  width: 4rem;
  height: 4rem;
}

.c1 > div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  border-radius: 50%;
  -webkit-animation: rotate 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  animation: rotate 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  width: 4rem;
  height: 4rem;
  border: 0.5rem solid #1E8BC3;
  border-color: #1E8BC3 transparent transparent transparent;
}

.c1 > div:nth-child(1) {
  -webkit-animation-delay: -0.45s;
  animation-delay: -0.45s;
}

.c1 > div:nth-child(2) {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.c1 > div:nth-child(3) {
  -webkit-animation-delay: -0.15s;
  animation-delay: -0.15s;
}

<div
    class="c0"
    data-testid="LoaderWrapper"
  >
    <div
      class="c1"
      data-testid="Loader"
    >
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</DocumentFragment>
`;
